14 June 2016: Wouter
	- Fix 775: unbound-host and unbound-anchor crash on windows, ignore
	  null delete for wsaevent.
	- Fix spelling in freebind option man page text.
	- Fix windows link of ssl with crypt32.

13 June 2016: Ralph
	- Use QTYPE=A for QNAME minimisation.
	- Keep track of number of time-outs when performing QNAME minimisation.
	  Stop minimising when number of time-outs for a QNAME/QTYPE pair is
	  more than three.

13 June 2016: Wouter
	- Fix #778: unbound 1.5.9: -h segfault (null deref).
	- Fix directory: fix for unbound-checkconf, it restores cwd.

10 June 2016: Wouter
	- And delete service.conf.shipped on uninstall.
	- In unbound.conf directory: dir immediately changes to that directory,
	  so that include: file below that is relative to that directory.
	  With chroot, make the directory an absolute path inside chroot.
	- keep debug symbols in windows build.
	- do not delete service.conf on windows uninstall.
	- document directory immediate fix and allow EXECUTABLE syntax in it
	  on windows.

9 June 2016: Wouter
	- Trunk is called 1.5.10 (with previous fixes already in there to 2
	  june).
	- Revert fix for NetworkService account on windows due to breakage
	  it causes.
	- Fix that windows install will not overwrite existing service.conf
	  file (and ignore gui config choices if it exists).

7 June 2016: Ralph
	- Lookup localzones by taglist from acl.
	- Possibility to lookup local_zone, regardless the taglist.
	- Added local_zone/taglist/acl unit test.

7 June 2016: Wouter
	- Fix #773: Non-standard Python location build failure with pyunbound.
	- Improve threadsafety for openssl 0.9.8 ecdsa dnssec signatures.

6 June 2016: Wouter
	- Better help text from -h (from Ray Griffith).
	- access-control-tag config directive.
	- local-zone-override config directive.
	- access-control-tag-action and access-control-tag-data config
	  directives.
	- free acl-tags, acltag-action and acltag-data config lists during